<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="photo_selected">Фото выбрано</string>
    <string name="app_name">DriveNext ЛР 2</string>
    <string name="tagline">Поможем найти твою следующую поездку</string>
    <string name="no_connection_title">Нет подключения\nк интернету</string>
    <string name="no_connection_message">Проверьте подключение и повторите попытку</string>
    <string name="retry">Повторить попытку</string>
    <string name="skip">Пропустить</string>
    <string name="next">Далее</string>
    <string name="start">Поехали</string>
    <string name="login_title">Вход в DriveNext</string>
    <string name="login_placeholder">Экран входа будет реализован в следующей лабораторной работе</string>
    <string name="main_title">Главный экран DriveNext</string>
    <string name="slide_1_title">Аренда автомобилей</string>
    <string name="slide_1_description">Открой для себя удобный и доступный способ передвижения</string>
    <string name="slide_2_title">Безопасно и удобно</string>
    <string name="slide_2_description">Арендуй автомобиль и наслаждайся его удобством</string>
    <string name="slide_3_title">Лучшие предложения</string>
    <string name="slide_3_description">Выбирай понравившееся среди сотен доступных автомобилей</string>
    <string name="connection_icon_description">Нет подключения к интернету</string>
    <string name="slide_image_description">Иллюстрация преимущества DriveNext</string>
    <string name="sign_in">Войти</string>
    <string name="register">Зарегистрироваться</string>
    <string name="sign_in_title">Войдите в аккаунт</string>
    <string name="sign_in_hint">Пожалуйста, введите свои данные</string>
    <string name="email">Электронная почта</string>
    <string name="password">Пароль</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="google_sign_in">Войти через Google</string>
    <string name="create_account">Создать аккаунт</string>
    <string name="agree_terms">Я согласен с условиями обслуживания и политикой конфиденциальности</string>
    <string name="back">Назад</string>
    <string name="surname">Фамилия</string>
    <string name="name">Имя</string>
    <string name="patronymic">Отчество</string>
    <string name="birth_date">Дата рождения</string>
    <string name="gender">Пол</string>
    <string name="male">Мужской</string>
    <string name="female">Женский</string>
    <string name="profile_photo">Фото профиля</string>
    <string name="license_number">Номер водительского удостоверения</string>
    <string name="issue_date">Дата выдачи</string>
    <string name="license_photo">Фото водительского удостоверения</string>
    <string name="passport_photo">Фото паспорта</string>
    <string name="upload_photo">Загрузить фото</string>
    <string name="registration_success_title">Поздравляем</string>
    <string name="registration_success_header">Пользуйтесь с удовольствием</string>
    <string name="registration_success_message">Вы успешно зарегистрировались. Обработка ваших персональных данных займет около двух часов.</string>
    <string name="invalid_email">Введите корректный адрес электронной почты.</string>
    <string name="passwords_mismatch">Пароли не совпадают.</string>
    <string name="terms_required">Необходимо согласиться с условиями обслуживания и политикой конфиденциальности.</string>
    <string name="required_fields">Пожалуйста, заполните все обязательные поля.</string>
    <string name="invalid_birth_date">Введите корректную дату рождения.</string>
    <string name="invalid_issue_date">Введите корректную дату выдачи.</string>
    <string name="photos_required">Пожалуйста, загрузите все необходимые фото.</string>
    <string name="invalid_license">Номер удостоверения должен содержать 10 символов.</string>
</resources>
